src/objects/IP_Vote__c.object
<CustomObject>
    <description>Holds the vote records used to identify who has voted for an idea and to be rolled up for a point total on the idea.</description>
    <fields>
        <fullName>Idea__c</fullName>
        <description>Idea the vote is associated to.</description>
        <label>Idea</label>
        <referenceTo>IP_Idea__c</referenceTo>
        <relationshipName>IP_Idea_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The point value of the individual vote.  Set by the point value of the zone the parent idea is associated to.</description>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upvote__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean to track whether this vote is for or against the idea when calculating the point value.</description>
        <label>Upvote</label>
        <type>Checkbox</type>
    </fields>
    <label>Vote</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>